<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03">

        <ImageView
            android:id="@+id/imageViewkamera"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout1"
            app:layout_constraintLeft_toLeftOf="@+id/constraint_layout1"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout1"
            app:srcCompat="@drawable/kamera" />

        <TextView
            android:id="@+id/textViewKamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="115dp"
            android:text="@string/urun1"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkamera"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textwiewkameraaciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/urun1Aciklama"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkamera"
            app:layout_constraintTop_toBottomOf="@+id/textViewKamera" />

        <TextView
            android:id="@+id/textwievkamerafiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/urun1Fiyat"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkamera"
            app:layout_constraintTop_toBottomOf="@+id/textwiewkameraaciklama" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:backgroundTint="@color/purple_200"
            android:text="Satın Al"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkamera"
            app:layout_constraintTop_toTopOf="@+id/textwievkamerafiyat"
            app:layout_editor_absoluteY="133dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout1">

        <ImageView
            android:id="@+id/imageViewdefter"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout2"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout2"
            app:layout_constraintLeft_toLeftOf="@id/constraint_layout2"
            app:srcCompat="@drawable/defter" />

        <TextView
            android:id="@+id/textViewDefter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="115dp"
            android:text="@string/urun2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewdefter"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textwiewdefteraciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/urun2Aciklama"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewdefter"
            app:layout_constraintTop_toBottomOf="@+id/textViewDefter" />

        <TextView
            android:id="@+id/textwievdefterfiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/urun2Fiyat"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewdefter"
            app:layout_constraintTop_toBottomOf="@+id/textwiewdefteraciklama" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Satın Al"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewdefter"
            app:layout_constraintTop_toTopOf="@+id/textwievdefterfiyat"
            app:layout_editor_absoluteY="133dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/constraint_layout2">

        <ImageView
            android:id="@+id/imageViewkulaklik"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="@+id/constraint_layout3"
            app:layout_constraintTop_toTopOf="@+id/constraint_layout3"
            app:layout_constraintLeft_toLeftOf="@id/constraint_layout3"
            app:srcCompat="@drawable/kulaklik" />

        <TextView
            android:id="@+id/textViewKulaklik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="115dp"
            android:text="@string/urun3"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkulaklik"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textwiewkulaklikaciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/urun3Aciklama"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkulaklik"
            app:layout_constraintTop_toBottomOf="@+id/textViewKulaklik" />

        <TextView
            android:id="@+id/textwievkulaklikfiyat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/urun3Fiyat"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkulaklik"
            app:layout_constraintTop_toBottomOf="@+id/textwiewkulaklikaciklama" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="Satın Al"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageViewkulaklik"
            app:layout_constraintTop_toTopOf="@+id/textwievkulaklikfiyat"
            app:layout_editor_absoluteY="133dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>